--- a/src/main/resources/label.properties
+++ b/src/main/resources/label.properties
@@ -7,7 +7,7 @@ page.tabpanel.class=default-tabpanel
 page.content.viewnav.class=paged-view-navigation
 page.content.viewnav.link.class=link-bar
 page.content.viewnav.link.active.class=link-bar-active
-
+page.content.rhs.class=rhs-content-panel
 
 # Content Tab  bar
 content.tab.close.class=hal-TabLayout-close
@@ -69,6 +69,7 @@ configarea.content.class=gwt-TabPanelBottom
 configarea.edit.button.class=form-edit-button
 configarea.save.button.label=Save
 configarea.cancel.button.label=Cancel
+configarea.upload.button.class=gwt-FileUpload
 
 # Config pages
 config.shared.add.label=Add
