Added Deployments Test Cases

--- a/src/main/resources/label.properties
+++ b/src/main/resources/label.properties
@@ -75,6 +75,10 @@ configarea.upload.button.class=gwt-FileUpload
 config.shared.add.label=Add
 config.shared.remove.label=Remove
 
+#Deployments config
+config.deployments.state.change.label=En/Disable
+config.deployments.assign.label=Assign
+
 # Notification area and messages
 notificationarea.class=notification-button
 messagelist.list.class=message-list
