ConfigFragment save and resource checker

--- a/src/main/resources/label.properties
+++ b/src/main/resources/label.properties
@@ -70,6 +70,7 @@ configarea.edit.button.class=form-edit-button
 configarea.save.button.label=Save
 configarea.cancel.button.label=Cancel
 configarea.upload.button.class=gwt-FileUpload
+configarea.label.class=gwt-Label
 
 # Config pages
 config.shared.add.label=Add
@@ -151,6 +152,7 @@ config.federation.sp.configarea.saml.tab.label=SAML Handlers
 # Web Servlet
 config.web.servlet.configarea.global.tab.label=Global
 config.web.servlet.configarea.jsp.tab.label=JSP
+config.web.servlet.configarea.virtualservers.tab.label=Virtual Servers
 
 # Logging
 config.core.logging.handler.tab.label=Handler
