Moved pagedown functionality to Console class

--- a/src/main/resources/label.properties
+++ b/src/main/resources/label.properties
@@ -8,6 +8,7 @@ page.content.viewnav.class=paged-view-navigation
 page.content.viewnav.link.class=link-bar
 page.content.viewnav.link.active.class=link-bar-active
 page.content.rhs.class=rhs-content-panel
+page.scrollpanel.id=ScrollPanel
 
 # Content Tab  bar
 content.tab.close.class=hal-TabLayout-close
