new hal 2.8 configuration navigation abstraction

--- a/src/main/resources/label.properties
+++ b/src/main/resources/label.properties
@@ -2,7 +2,9 @@
 page.tablayout.class=gwt-TabLayoutPanelContent
 page.splitlayout.class=split-center
 page.content.parent.class=main-content-panel
-page.content.id=content-center
+page.content.id=main-content-area
+page.content.panel.class=main-content-panel
+page.content.area.id=main-content-area
 page.tabpanel.class=default-tabpanel
 page.content.viewnav.class=paged-view-navigation
 page.content.viewnav.link.class=link-bar
@@ -72,6 +74,14 @@ configarea.save.button.label=Save
 configarea.cancel.button.label=Cancel
 configarea.upload.button.class=gwt-FileUpload
 configarea.label.class=gwt-Label
+configarea.view.panel.class=form-view-panel
+configarea.layout.class=fill-layout-width
+
+# Configuration page
+options.dropdown.class=dropdown-toggle
+options.menu.item.class=gwt-MenuItem
+table.cell.class=cellTableCell
+table.cell.selected.class=cellTableSelectedRowCell
 
 # Config pages
 config.shared.add.label=Add
@@ -256,3 +266,8 @@ components.selectbox.class=combobox
 components.selectbox.item.class=combobox-item
 components.selecbox.value.class=table-picker-value
 
+# Metrics
+metrics.container.class=metric-container
+metrics.grid.class=metric-grid
+metrics.grid.nominal.class=nominal
+metrics.grid.numerical.class=numerical
