Updated home page test caseS

--- a/src/main/resources/label.properties
+++ b/src/main/resources/label.properties
@@ -202,14 +202,16 @@ homepage.info.config.id=profile
 homepage.info.domain.config.id=profiles
 homepage.info.runtime.id=standalone-runtime
 homepage.info.domain.runtime.id=domain-runtime
-
+homepage.info.access.control.id=rbac
 homepage.info.admin.id=administration
-homepage.info.domain.id=hosts
+homepage.info.domain.deployments.id=domain-deployments
+homepage.info.deployments.id=standalone-deployments
 
+homepage.info.access.control.link.label=Access Control
 homepage.info.config.link.label=Configuration
 homepage.info.runtime.link.label=Runtime
 homepage.info.admin.link.label=Administration
-homepage.info.domain.link.label=Domain
+homepage.info.deployments.link.label=Deployments
 
 
 homepage.task.class=homepage-content-box
@@ -224,6 +226,7 @@ homepage.task.datasource.id=Datasources
 homepage.task.admin.id=Administration
 homepage.task.topology.id=Topology
 homepage.task.server-group.id=CreateServerGroup
+
 
 homepage.task.deployment.link.label=Create Deployment
 homepage.task.patch.link.label=Patch Management
