Fixed deployments Test Cases for standalone mode
Fixed both managed and unmanaged deployments itest cases for standalone mode

--- a/src/main/resources/label.properties
+++ b/src/main/resources/label.properties
@@ -10,6 +10,8 @@ page.content.viewnav.class=paged-view-navigation
 page.content.viewnav.link.class=link-bar
 page.content.viewnav.link.active.class=link-bar-active
 page.content.rhs.class=rhs-content-panel
+page.content.nav.column=navigation-column
+page.content.gwt-layoutpanel=gwt-SplitLayoutPanel
 page.scrollpanel.id=ScrollPanel
 
 # Content Tab  bar
@@ -119,7 +121,7 @@ rhaccess.open.case.description.class=description-box
 logviewer.btn.view.id=button_log_file_view;
 logviewer.tab.main.label=Log Files
 logviewer.window.pending.id=window_log_file_stream_in_progress
-logviewer.window.pending.cancel.class=button_log_file_cancel_stream
+logviewer.window.pending.cancel.class=button_log_file_cancel_streambt
 logviewer.content.text.class=ace_text-layer
 
 # Server overview
