Fixed mail test case.
Updated mail test case for jboss7.0.0 DR6.

--- a/src/main/resources/label.properties
+++ b/src/main/resources/label.properties
@@ -12,6 +12,7 @@ page.content.viewnav.link.class=link-bar
 page.content.viewnav.link.active.class=link-bar-active
 page.content.rhs.class=rhs-content-panel
 page.content.nav.column=navigation-column
+page.content.nav.table=navigation-cell-table
 page.content.gwt-layoutpanel=gwt-SplitLayoutPanel
 page.scrollpanel.id=ScrollPanel
 
