Add connectors abstraction.

--- a/src/main/resources/label.properties
+++ b/src/main/resources/label.properties
@@ -166,6 +166,7 @@ config.federation.sp.configarea.saml.tab.label=SAML Handlers
 # Web Servlet
 config.web.servlet.configarea.global.tab.label=Global
 config.web.servlet.configarea.jsp.tab.label=JSP
+config.web.servlet.configarea.connectors.tab.label=Connectors
 config.web.servlet.configarea.virtualservers.tab.label=Virtual Servers
 
 # Logging
