Adding missing class for connector abstraction.

--- a/src/main/resources/label.properties
+++ b/src/main/resources/label.properties
@@ -181,6 +181,8 @@ editor.shared.property.empty.value.label=click to edit
 # Tabes
 
 resourcetable.class=master_detail-master
+
++resourcetable.cell.class=cellTableCell
 resourcepager.pager.class=default-pager
 resourcepager.textlink.class=textlink-cell
 resourcepager.viewlink.class=viewlink-cell
