rhaccess stabilization workaround

--- a/src/main/resources/label.properties
+++ b/src/main/resources/label.properties
@@ -117,6 +117,8 @@ rhaccess.search.results.id=solutions
 rhaccess.open.case.owner.id=rha-owner-select
 rhaccess.open.case.summary.id=rha-case-summary
 rhaccess.open.case.description.class=description-box
+rhaccess.open.case.product.id=rha-product-select
+rhaccess.open.case.product.version.id=rha-product-version-select
 
 # Log Viewer
 logviewer.btn.view.id=button_log_file_view;
