Fixed all test for Resource adapters.
Fixed adding and removing property, admin object and managed connection definition of resource adapters test case.

--- a/src/main/resources/label.properties
+++ b/src/main/resources/label.properties
@@ -1,5 +1,6 @@
 # layout
 page.tablayout.class=gwt-TabLayoutPanelContent
+page.tablayout.container.class=gwt-TabLayoutPanelContentContainer
 page.splitlayout.class=split-center
 page.content.parent.class=main-content-panel
 page.content.id=main-content-area
