Add an API to select finder column/rows and invoke action on them

--- a/src/main/resources/label.properties
+++ b/src/main/resources/label.properties
@@ -275,7 +275,7 @@ homepage.sidebar.operational.links.consulting.href=https://www.redhat.com/consul
 # Various Components
 components.selectbox.class=combobox
 components.selectbox.item.class=combobox-item
-components.selecbox.value.class=table-picker-value
+components.selecbox.value.class=table-picker-row
 
 # Metrics
 metrics.container.class=metric-container
