--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
         <scope>import</scope>
       </dependency>
 
+      <dependency>
+      	<groupId>org.seleniumhq.selenium</groupId>
+      	<artifactId>selenium-firefox-driver</artifactId>
+      	<version>2.42.2</version>
+      </dependency>
+
+
     </dependencies>
 
   </dependencyManagement>
