Updated closeFile method in LogViewerPage. Updated selecting closing button for opened file in LogViewerPage.
Updated finderName and label.properties.

Reordered FinderNames class to keep constants  alphabetically ordered.

--- a/common/src/main/resources/label.properties
+++ b/common/src/main/resources/label.properties
@@ -18,6 +18,7 @@ page.scrollpanel.id=ScrollPanel
 
 # Content Tab  bar
 content.tab.close.class=hal-TabLayout-close
+remove.icon.class=icon-remove
 
 # Navigation
 navigation.selector.class=lhs-selector
