Updated finish method in wizard to work with "Done" labeled button

--- a/common/src/main/resources/label.properties
+++ b/common/src/main/resources/label.properties
@@ -61,6 +61,7 @@ modals.window.spinner.class=spinner
 
 modals.wizard.next.label=Next
 modals.wizard.finish.label=Finish
+modals.wizard.done.label=Done
 
 # Confirmation window
 modals.confirmation.confirm.label=Confirm
