Rbac tests abstraction and tools

--- a/common/src/main/resources/label.properties
+++ b/common/src/main/resources/label.properties
@@ -41,6 +41,8 @@ header.tabs.runtime.id=header-standalone-runtime
 header.tabs.config.id=header-server
 header.tabs.admin.id=header-administration
 
+header.textlink.class=header-textlink
+
 # Page Footer
 footer.version.label=Version Information
 footer.links.tools.label=Tools
@@ -62,6 +64,8 @@ modals.window.spinner.class=spinner
 modals.wizard.next.label=Next
 modals.wizard.finish.label=Finish
 modals.wizard.done.label=Done
+
+modals.menu.item.class=menu-item
 
 # Confirmation window
 modals.confirmation.confirm.label=Confirm
@@ -285,3 +289,6 @@ metrics.container.class=metric-container
 metrics.grid.class=metric-grid
 metrics.grid.nominal.class=nominal
 metrics.grid.numerical.class=numerical
+
+# Icons
+icon.user.class=icon-user
