Check style of tests as well.

--- a/pom.xml
+++ b/pom.xml
@@ -263,6 +263,7 @@
           <configLocation>checkstyle.xml</configLocation>
           <consoleOutput>true</consoleOutput>
           <failsOnError>true</failsOnError>
+          <includeTestSourceDirectory>true</includeTestSourceDirectory>
           <useFile />
         </configuration>
       </plugin>
