--- a/pom.xml
+++ b/pom.xml
@@ -133,7 +133,13 @@
     <dependency>
       <groupId>org.wildfly.core</groupId>
       <artifactId>wildfly-cli</artifactId>
-      <version>2.0.0.Alpha2</version>
+      <version>2.0.0.CR5</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.jboss.xnio</groupId>
+      <artifactId>xnio-nio</artifactId>
+      <version>3.3.2.Final</version>
     </dependency>
 
   </dependencies>
