--- a/common/src/main/resources/label.properties
+++ b/common/src/main/resources/label.properties
@@ -204,51 +204,16 @@ infotable.key.class=form-item-title
 runtime.server.switch.button=button.table-picker
 
 # Homepage
-homepage.link.class=homepage-link
-homepage.section.class=homepage-section
-homepage.section.closed.class=homepage-section-closed
-homepage.section.opened.class=homepage-section-open
-homepage.section.header.class=homepage-section-header
 
-homepage.info.class=homepage-info-box
-homepage.info.header.class=homepage-info-box-header
+homepage.module.class=eap-home-module-container
+homepage.module.header.class=eap-home-module-header
+homepage.module.start.link.label=Start
 
-homepage.info.config.id=profile
-homepage.info.domain.config.id=profiles
-homepage.info.runtime.id=standalone-runtime
-homepage.info.domain.runtime.id=domain-runtime
-homepage.info.access.control.id=rbac
-homepage.info.admin.id=administration
-homepage.info.domain.deployments.id=domain-deployments
-homepage.info.deployments.id=standalone-deployments
-
-homepage.info.access.control.link.label=Access Control
-homepage.info.config.link.label=Configuration
-homepage.info.runtime.link.label=Runtime
-homepage.info.admin.link.label=Administration
-homepage.info.deployments.link.label=Deployments
-
-
-homepage.task.class=homepage-content-box
-homepage.task.header.class=homepage-content-box-header
-homepage.task.opened.class=homepage-content-box-open
-homepage.task.closed.class=homepage-content-box-closed
-
-# ID attribute prefixes from links a headers. However we are using these to locate tasks as a whole.
-homepage.task.deployment.id=NewDeployment
-homepage.task.patch.id=ApplyPath
-homepage.task.datasource.id=Datasources
-homepage.task.admin.id=Administration
-homepage.task.topology.id=Topology
-homepage.task.server-group.id=CreateServerGroup
-
-
-homepage.task.deployment.link.label=Create Deployment
-homepage.task.patch.link.label=Patch Management
-homepage.task.datasource.link.label=Datasources
-homepage.task.admin.link.label=Role Assignment
-homepage.task.topology.link.label=Domain Overview
-homepage.task.server-group.link.label=Create Server Group
+homepage.module.access.control.link.label=Access Control
+homepage.module.config.link.label=Configuration
+homepage.module.runtime.link.label=Runtime
+homepage.module.patching.link.label=Patching
+homepage.module.deployments.link.label=Deployments
 
 homepage.sidebar.class=homepage-sidebar
 homepage.sidebar.section.header.class=homepage-sidebar-section-header
