Tests for Need Help links in console homepage.

--- a/common/src/main/resources/label.properties
+++ b/common/src/main/resources/label.properties
@@ -207,6 +207,7 @@ runtime.server.switch.button=button.table-picker
 
 homepage.module.class=eap-home-module-container
 homepage.module.header.class=eap-home-module-header
+homepage.module.column.class=eap-home-module-col
 homepage.module.start.link.label=Start
 
 homepage.module.access.control.link.label=Access Control
@@ -215,34 +216,27 @@ homepage.module.runtime.link.label=Runtime
 homepage.module.patching.link.label=Patching
 homepage.module.deployments.link.label=Deployments
 
-homepage.sidebar.class=homepage-sidebar
-homepage.sidebar.section.header.class=homepage-sidebar-section-header
-homepage.sidebar.section.class=homepage-sidebar-section
-homepage.sidebar.section.linkroot.class=homepage-sidebar-links
+homepage.needhelp.general.title=General Resources
+homepage.needhelp.general.links.doc.label=Read JBoss EAP Documentation
+homepage.needhelp.general.links.doc.href=https://access.redhat.com/site/documentation/JBoss_Enterprise_Application_Platform/
+homepage.needhelp.general.links.about.label=Learn more about Red Hat JBoss
+homepage.needhelp.general.links.about.href=http://www.redhat.com/products/jbossenterprisemiddleware/application-platform/
+homepage.needhelp.general.links.help.label=Get help or submit a trouble ticket
+homepage.needhelp.general.links.help.href=https://access.redhat.com/home
+homepage.needhelp.general.links.training.label=Sign up for Red Hat training courses
+homepage.needhelp.general.links.training.href=https://www.redhat.com/training/paths/?cr=cp|tr|pp|00002
 
-homepage.sidebar.general.head.label=General Resources
-homepage.sidebar.general.links.doc.label=Read JBoss EAP Documentation
-homepage.sidebar.general.links.doc.href=https://access.redhat.com/site/documentation/JBoss_Enterprise_Application_Platform/
-homepage.sidebar.general.links.about.label=Learn more about Red Hat JBoss
-homepage.sidebar.general.links.about.href=http://www.redhat.com/products/jbossenterprisemiddleware/application-platform/
-homepage.sidebar.general.links.help.label=Get help or submit a trouble ticket
-homepage.sidebar.general.links.help.href=https://access.redhat.com/home
-homepage.sidebar.general.links.training.label=Sign up for Red Hat training courses
-homepage.sidebar.general.links.training.href=https://www.redhat.com/training/paths/?cr=cp|tr|pp|00002
-
-homepage.sidebar.dev.head.label=Developer Resources
-homepage.sidebar.dev.links.quickstarts.label=Access tutorials and quickstarts
-homepage.sidebar.dev.links.quickstarts.href=http://www.jboss.org/jdf/
-homepage.sidebar.dev.links.community.label=Ask questions to the development community
-homepage.sidebar.dev.links.community.href=https://community.jboss.org/en/jbosseap
-
-homepage.sidebar.operational.head.label=Operational Resources
-homepage.sidebar.operational.links.matrix.label=View supported configurations for JBoss EAP
-homepage.sidebar.operational.links.matrix.href=https://access.redhat.com/site/articles/111663
-homepage.sidebar.operational.links.kb.label=Search the Red Hat knowledgebase for solutions to issues you encounter
-homepage.sidebar.operational.links.kb.href=https://access.redhat.com/site/knowledgebase
-homepage.sidebar.operational.links.consulting.label=Reach out to Red Hat consulting for further help from experts
-homepage.sidebar.operational.links.consulting.href=https://www.redhat.com/consulting/
+homepage.needhelp.gethelp.title=Get Help
+homepage.needhelp.gethelp.links.quickstarts.label=Access tutorials and quickstarts
+homepage.needhelp.gethelp.links.quickstarts.href=http://www.jboss.org/jdf/
+homepage.needhelp.gethelp.links.community.label=Ask questions to the development community
+homepage.needhelp.gethelp.links.community.href=https://community.jboss.org/en/jbosseap
+homepage.needhelp.gethelp.links.matrix.label=View supported configurations for JBoss EAP
+homepage.needhelp.gethelp.links.matrix.href=https://access.redhat.com/site/articles/111663
+homepage.needhelp.gethelp.links.kb.label=Search the Red Hat knowledgebase for solutions to issues you encounter
+homepage.needhelp.gethelp.links.kb.href=https://access.redhat.com/site/knowledgebase
+homepage.needhelp.gethelp.links.consulting.label=Reach out to Red Hat consulting for further help from experts
+homepage.needhelp.gethelp.links.consulting.href=https://www.redhat.com/consulting/
 
 # Various Components
 components.selectbox.class=combobox
