--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,17 @@
     <as.managementPort>9990</as.managementPort>
     <arq.managementPort>${as.managementPort}</arq.managementPort>
     <take.screenshot.after.each.test>false</take.screenshot.after.each.test>
+    <version.org.wildfly.extras.creaper>0.9.0</version.org.wildfly.extras.creaper>
   </properties>
+
+
+  <repositories>
+    <repository>
+      <id>jboss-public-repository-group</id>
+      <name>JBoss Public Maven Repository Group</name>
+      <url>http://repository.jboss.org/nexus/content/groups/public/</url>
+    </repository>
+  </repositories>
 
   <dependencyManagement>
 
@@ -142,6 +152,34 @@
       <artifactId>xnio-nio</artifactId>
       <version>3.3.2.Final</version>
     </dependency>
+
+    <!-- creaper dependencies -->
+      <dependency>
+        <groupId>org.wildfly.extras.creaper</groupId>
+        <artifactId>creaper-core</artifactId>
+        <version>${version.org.wildfly.extras.creaper}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.jboss.as</groupId>
+            <artifactId>jboss-as-controller-client</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.jboss.as</groupId>
+            <artifactId>jboss-as-cli</artifactId>
+          </exclusion>
+          </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.wildfly.extras.creaper</groupId>
+        <artifactId>creaper-commands</artifactId>
+        <version>${version.org.wildfly.extras.creaper}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.wildfly</groupId>
+            <artifactId>wildfly-patching</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
 
   </dependencies>
 
@@ -300,7 +338,6 @@
           <tagNameFormat>v@{version}</tagNameFormat>
         </configuration>
       </plugin>
-      
     </plugins>
   </build>
 
