--- a/basic/pom.xml
+++ b/basic/pom.xml
@@ -15,6 +15,11 @@
       <groupId>org.jboss.as</groupId>
       <artifactId>hal-testsuite-common</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.mina</groupId>
+      <artifactId>mina-core</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
