--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
     <arq.managementPort>${as.managementPort}</arq.managementPort>
     <take.screenshot.after.each.test>false</take.screenshot.after.each.test>
     <version.org.wildfly.extras.creaper>0.9.0</version.org.wildfly.extras.creaper>
+    <version.org.apache.mina>2.0.9</version.org.apache.mina>
   </properties>
 
 
@@ -89,6 +90,12 @@
         <groupId>org.jboss.as</groupId>
         <artifactId>hal-testsuite-common</artifactId>
         <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.mina</groupId>
+        <artifactId>mina-core</artifactId>
+        <version>${version.org.apache.mina}</version>
       </dependency>
 
     </dependencies>
