JBEAP-1379: add ability to dismiss reload required message window after confirmation window.

--- a/common/src/main/resources/label.properties
+++ b/common/src/main/resources/label.properties
@@ -70,6 +70,9 @@ modals.menu.item.class=menu-item
 # Confirmation window
 modals.confirmation.confirm.label=Confirm
 
+# Reload required window
+modals.reload.required.dismiss.label=Dismiss
+
 # Console Settings window
 settings.analytics.id=analytics
 settings.analytics.cookie=as7_ui_analytics
