--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
     <take.screenshot.after.each.test>false</take.screenshot.after.each.test>
     <version.org.wildfly.extras.creaper>0.9.2</version.org.wildfly.extras.creaper>
     <version.org.apache.mina>2.0.9</version.org.apache.mina>
+    <version.org.jgrapht>0.9.1</version.org.jgrapht>
   </properties>
 
 
@@ -96,6 +97,12 @@
         <groupId>org.apache.mina</groupId>
         <artifactId>mina-core</artifactId>
         <version>${version.org.apache.mina}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.jgrapht</groupId>
+        <artifactId>jgrapht-core</artifactId>
+        <version>${version.org.jgrapht}</version>
       </dependency>
 
     </dependencies>
