--- a/pom.xml
+++ b/pom.xml
@@ -158,13 +158,19 @@
     <dependency>
       <groupId>org.wildfly.core</groupId>
       <artifactId>wildfly-cli</artifactId>
-      <version>2.0.0.CR5</version>
+      <version>2.0.5.Final</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.wildfly.core</groupId>
+      <artifactId>wildfly-patching</artifactId>
+      <version>2.0.5.Final</version>
     </dependency>
 
     <dependency>
       <groupId>org.jboss.xnio</groupId>
       <artifactId>xnio-nio</artifactId>
-      <version>3.3.2.Final</version>
+      <version>3.3.4.Final</version>
     </dependency>
 
     <!-- creaper dependencies -->
