Added test for EAP7 tour to NeedHelpTestCase

--- a/common/src/main/resources/label.properties
+++ b/common/src/main/resources/label.properties
@@ -204,6 +204,13 @@ runtime.server.switch.button=button.table-picker
 
 # Homepage
 
+homepage.title.class=eap-home-title
+
+homepage.newtoeap.text=New to EAP7?
+homepage.newtoeap.link=Take a Tour
+homepage.newtoeap.content.class=eap-quick-tour-steps
+
+
 homepage.module.class=eap-home-module-container
 homepage.module.header.class=eap-home-module-header
 homepage.module.column.class=eap-home-module-col
