HAL-951: homepage texts updated.

--- a/common/src/main/resources/label.properties
+++ b/common/src/main/resources/label.properties
@@ -206,7 +206,7 @@ runtime.server.switch.button=button.table-picker
 
 homepage.title.class=eap-home-title
 
-homepage.newtoeap.text=New to EAP7?
+homepage.newtoeap.text=New to JBoss EAP7?
 homepage.newtoeap.link=Take a Tour
 homepage.newtoeap.content.class=eap-quick-tour-steps
 
@@ -225,7 +225,7 @@ homepage.module.deployments.link.label=Deployments
 homepage.needhelp.general.title=General Resources
 homepage.needhelp.general.links.doc.label=Read JBoss EAP Documentation
 homepage.needhelp.general.links.doc.href=https://access.redhat.com/site/documentation/JBoss_Enterprise_Application_Platform/
-homepage.needhelp.general.links.about.label=Learn more about Red Hat JBoss
+homepage.needhelp.general.links.about.label=Learn more about JBoss EAP
 homepage.needhelp.general.links.about.href=http://www.redhat.com/products/jbossenterprisemiddleware/application-platform/
 homepage.needhelp.general.links.help.label=Get help or submit a trouble ticket
 homepage.needhelp.general.links.help.href=https://access.redhat.com/home
