JBEAP-1942: supported config page link changed.

--- a/common/src/main/resources/label.properties
+++ b/common/src/main/resources/label.properties
@@ -238,7 +238,7 @@ homepage.needhelp.gethelp.links.quickstarts.href=http://www.jboss.org/quickstart
 homepage.needhelp.gethelp.links.community.label=Ask questions to the development community
 homepage.needhelp.gethelp.links.community.href=https://community.jboss.org/en/jbosseap
 homepage.needhelp.gethelp.links.matrix.label=View supported configurations for JBoss EAP
-homepage.needhelp.gethelp.links.matrix.href=https://access.redhat.com/site/articles/111663
+homepage.needhelp.gethelp.links.matrix.href=https://access.redhat.com/articles/2026253/
 homepage.needhelp.gethelp.links.kb.label=Search the Red Hat knowledgebase for solutions to issues you encounter
 homepage.needhelp.gethelp.links.kb.href=https://access.redhat.com/site/knowledgebase
 homepage.needhelp.gethelp.links.consulting.label=Reach out to Red Hat consulting for further help from experts
