Taking xml snapshots after each test class ends running

--- a/common/src/main/resources/label.properties
+++ b/common/src/main/resources/label.properties
@@ -257,3 +257,8 @@ metrics.grid.numerical.class=numerical
 
 # Icons
 icon.user.class=icon-user
+
+# XML config snapshots
+snapshots.target.directory.name=xmlConfigSnapshots
+snapshots.target.file.prefix=config
+snapshots.target.file.suffix=.xml
