--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <groupId>org.jboss.as</groupId>
   <artifactId>hal-testsuite</artifactId>
-  <version>0.0.2-SNAPSHOT</version>
+  <version>0.0.2</version>
   <packaging>pom</packaging>
 
   <modules>
@@ -20,7 +20,7 @@
     <connection>scm:git:git@github.com:hal/testsuite.git</connection>
     <developerConnection>scm:git:git@github.com:hal/testsuite.git</developerConnection>
     <url>https://github.com/hal/testsuite/</url>
-    <tag>HEAD</tag>
+    <tag>v0.0.2</tag>
   </scm>
 
   <properties>
