--- a/common/pom.xml
+++ b/common/pom.xml
@@ -13,7 +13,7 @@
   <parent>
     <groupId>org.jboss.as</groupId>
     <artifactId>hal-testsuite</artifactId>
-    <version>0.0.2</version>
+    <version>0.0.3-SNAPSHOT</version>
   </parent>
 
   <artifactId>hal-testsuite-common</artifactId>
