--- a/rbac/pom.xml
+++ b/rbac/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.jboss.as</groupId>
     <artifactId>hal-testsuite</artifactId>
-    <version>0.0.3</version>
+    <version>0.0.4-SNAPSHOT</version>
   </parent>
 
   <artifactId>hal-testsuite-rbac</artifactId>
