--- a/basic/pom.xml
+++ b/basic/pom.xml
@@ -15,6 +15,10 @@
       <groupId>org.jboss.as</groupId>
       <artifactId>hal-testsuite-common</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.jboss.spec.javax.servlet</groupId>
+      <artifactId>jboss-servlet-api_3.1_spec</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
