Test for HAL-1125: access to Server Group details page with different privileges to multiple groups

--- a/common/src/main/resources/label.properties
+++ b/common/src/main/resources/label.properties
@@ -257,6 +257,7 @@ metrics.grid.numerical.class=numerical
 
 # Icons
 icon.user.class=icon-user
+icon.backarrows.class=icon-double-angle-left
 
 # XML config snapshots
 snapshots.target.directory.name=xmlConfigSnapshots
