--- a/rbac/src/main/resources/mgmt-users.properties
+++ b/rbac/src/main/resources/mgmt-users.properties
@@ -51,6 +51,7 @@ other-maintainer=a72b17aea0560a1939504255d6af8f9b
 other-auditor=f7836f76be95bafd9bd9c7340537c7ab
 
 mainmaster-administrator=42cdbc6a862f89180abfa58501ae4200
+main-administrator-other-monitor=fa4977249caf9e1658b4dfe5f1d63f74
 
 #########################
 #   HOST SCOPED ROLES   #
