[HAL-1070] Web Console use select boxes for inputs which must be a particular value - tests
field

--- a/common/src/main/resources/label.properties
+++ b/common/src/main/resources/label.properties
@@ -249,6 +249,9 @@ components.selectbox.class=combobox
 components.selectbox.item.class=combobox-item
 components.selecbox.value.class=table-picker-row
 
+components.suggestboxpopup.content.class=suggestPopupContent
+components.suggestboxpopup.class=gwt-SuggestBoxPopup
+
 # Metrics
 metrics.container.class=metric-container
 metrics.grid.class=metric-grid
