Tests for batch job monitoring and management.

--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,14 @@
         <scope>provided</scope>
       </dependency>
 
+      <!-- batch dependencies -->
+      <dependency>
+        <groupId>org.jboss.spec.javax.batch</groupId>
+        <artifactId>jboss-batch-api_1.0_spec</artifactId>
+        <version>1.0.0.Final</version>
+        <scope>provided</scope>
+      </dependency>
+
     </dependencies>
 
   </dependencyManagement>
