--- a/basic/pom.xml
+++ b/basic/pom.xml
@@ -19,6 +19,10 @@
       <groupId>org.jboss.spec.javax.servlet</groupId>
       <artifactId>jboss-servlet-api_3.1_spec</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.jboss.spec.javax.batch</groupId>
+      <artifactId>jboss-batch-api_1.0_spec</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
