--- a/basic/pom.xml
+++ b/basic/pom.xml
@@ -23,6 +23,18 @@
       <groupId>org.jboss.spec.javax.batch</groupId>
       <artifactId>jboss-batch-api_1.0_spec</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.jboss.spec.javax.ejb</groupId>
+      <artifactId>jboss-ejb-api_3.2_spec</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.ejb3</groupId>
+      <artifactId>jboss-ejb3-ext-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.wildfly</groupId>
+      <artifactId>wildfly-client-all</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
