--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,28 @@
         <scope>provided</scope>
       </dependency>
 
+      <!-- EJB dependencies -->
+      <dependency>
+        <groupId>org.jboss.spec.javax.ejb</groupId>
+        <artifactId>jboss-ejb-api_3.2_spec</artifactId>
+        <version>1.0.0.Final</version>
+        <scope>provided</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.jboss.ejb3</groupId>
+        <artifactId>jboss-ejb3-ext-api</artifactId>
+        <version>2.2.0.Final</version>
+        <scope>provided</scope>
+      </dependency>
+
+      <!-- Client dependencies -->
+      <dependency>
+        <groupId>org.wildfly</groupId>
+        <artifactId>wildfly-client-all</artifactId>
+        <version>10.1.0.Final</version>
+      </dependency>
+
     </dependencies>
 
   </dependencyManagement>
